# griddy-sdk-python

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .pre-commit-config.yaml  .speakeasy-preserve  .travis.yml  CLAUDE.md  README.md  USAGE.md  codecov.yml  griddy_example.py  griddy_test.py  index.html  mkdocs.yml  nfl-complete-api.yaml  pfr_2015_sked.html  playlist_response.yaml  playwright_example.py  pylintrc  pyproject.toml  pytest.ini
.github/workflows/: check-version-bump.yml  publish-codeartifacts.yaml  python.yml  quality-gates.yml
.openapi-generator/: FILES
.speakeasy/: gen.yaml
FiddlerSnapshots/: ProNFL_Content_Insights_Season.json  ProNFL_Secured_Videos_Coaches.json
FiddlerSnapshots/HARs/: ProNFL_Content_Insights.har  ProNFL_Secured_Stats.har  RegularNFL_Experience_Games.har  RegularNFL_Experience_Teams.har  RegularNFL_Football_Experience.har  RegularNFL_Football_Games.har  RegularNFL_Football_Standings.har  RegularNFL_Football_Stats.har  RegularNFL_Football_Venues.har  RegularNFL_Football_Weeks.har  RegularNFL_Identity.har
FiddlerSnapshots/Processed/: ProNFL_Secured_Plays_Winprobability.json  ProNFL_Secured_Plays_Winprobabilitymin.json  ProNFL_Secured_Stats_Defense_Nearest_Season.json  ProNFL_Secured_Stats_Defense_Overview_Season.json  ProNFL_Secured_Stats_Defense_Passrush_Season.json  ProNFL_Secured_Stats_Fantasy_Season.json  ProNFL_Secured_Stats_PlayersOffense_Passing_Season.json  ProNFL_Secured_Stats_PlayersOffense_Passing_Week.json  ProNFL_Secured_Stats_PlayersOffense_Receiving_Season.json  ProNFL_Secured_Stats_PlayersOffense_Receiving_Week.json  ProNFL_Secured_Stats_PlayersOffense_Rushing_Season.json  ProNFL_Secured_Stats_PlayersOffense_Rushing_Week.json  ProNFL_Secured_Stats_TeamDefense_Overview_Season.json  ProNFL_Secured_Stats_TeamDefense_Pass_Season.json  ProNFL_Secured_Stats_TeamDefense_Rush_Season.json  ProNFL_Secured_Stats_TeamOffense_Overview_Season.json  ProNFL_Secured_Stats_TeamOffense_Pass_Season.json  ProNFL_Secured_Videos_Filmroom_Plays.json
FiddlerSnapshots/SandboxFiles/: ProNFL_Secured_Plays_Playlist_Game.json  ProNFL_Secured_Stats_Consolidated.json
docs/: NFL_REFACTORING_ANALYSIS.md  index.md  missing-documentation-audit.md  nfl-com-api.yaml  reg-nfl-api-complete-working.yaml
docs/api/: core.md  exceptions.md  index.md  nfl.md
docs/developer/: ADDING_METHODS_TO_NFL_SDK.md  ENDPOINT_MIGRATION_STATUS.md  PFR_FRIVOLITIES_IMPL.md  TESTING_STRATEGY.md  TODO_REPORT.md  adding-methods.md  contributing.md
docs/general/: nextgenstats-api.yaml  nfl-com-api.yaml
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/models/: airyardtype.md  attributes.md  authorizations.md  award.md  awardtype.md  away.md  awayteam.md  awayteamboxscore.md  background.md  binaryflagenum.md  boxscoreplayerextrapointsstatistic.md  boxscoreplayerfieldgoalsstatistic.md  boxscoreplayerfumblesstatistic.md  boxscoreplayerkickingstatistic.md  boxscoreplayerkickreturnstatistic.md  boxscoreplayerpassingstatistic.md  boxscoreplayerpuntingstatistic.md  boxscoreplayerpuntreturnstatistic.md  boxscoreplayerreceivingstatistic.md  boxscoreplayerrushingstatistic.md  boxscoreplayertacklesstatistic.md  boxscoreresponse.md  boxscoreschedule.md  boxscorescore.md  boxscoreteam.md  broadcastinfo.md  camerasourceenum.md  careerstats.md  category.md  clinched.md  coachesfilevideosubtypeenum.md  coachesfilmresponse.md  coachesfilmvideo.md  coachesfilmvideobackground.md  coachesfilmvideocta.md  coachesfilmvideoimage.md  coachesfilmvideopromoasset.md  coachesfilmvideotype.md  coachesfilmvideovideo.md  conference.md  (+415 more)
docs/nfl/: AirYardTypeEnum.md  AuthenticationController.md  BettingController.md  BettingOddsFormat.md  BettingOddsFormatAmericanOdds.md  BettingOddsFormatDecimalOdds.md  BinaryFlagEnum.md  BoxScorePlayerExtraPointsStatistic.md  BoxScorePlayerFieldGoalsStatistic.md  BoxScorePlayerKickReturnStatistic.md  BoxScorePlayerKickingStatistic.md  BoxScorePlayerPassingStatistic.md  BoxScorePlayerPuntReturnStatistic.md  BoxScorePlayerPuntingStatistic.md  BoxScorePlayerReceivingStatistic.md  BoxScorePlayerRushingStatistic.md  BoxScorePlayerTacklesStatistic.md  BoxScoreResponse.md  BoxScoreResponsePlayerStats.md  BoxScoreResponsePlayerStatsAway.md  BoxscoreSchedule.md  BoxscoreScore.md  BoxscoreTeam.md  CalculationMethodEnum.md  CameraSourceEnum.md  CoachesFileVideoSubTypeEnum.md  Conference.md  ConferenceEnum.md  ContentController.md  ContentInsightsController.md  ContentTagEnum.md  CoverageMetricsCoverageSnaps.md  CurrentGame.md  CurrentGamesResponse.md  DefenseGameSituationEnum.md  DefensiveMetricsExplanation.md  DefensiveMetricsExplanationEpa.md  DefensiveMetricsExplanationQbpPct.md  DefensivePassMetricsExplanation.md  DefensivePassMetricsExplanationEpaPass.md  (+522 more)
docs/refactoring/: 01_FIX_PYDANTIC_MODELS.md  02_EXTRACT_BASESDK_HELPERS.md  03_DEDUPLICATE_DYNAMIC_IMPORT.md  04_STANDARDIZE_ERROR_CODES.md  05_SPLIT_LARGE_FILES.md  06_SYNC_ASYNC_FACTORY.md
docs/user-guide/: configuration.md  error-handling.md  nfl.md  overview.md
examples/: cookie_extraction_example.py  draft_picks_report.json  draft_profiles.json  draft_teamneeds.json  espn_example.py  example_profile.json  nfl_example.py  pff_example.py  pfr_example.py  urls_list.json
scripts/: check-version-bump.sh  coverage-report.sh  generate_endpoints.py  generate_model_inits.py  poetry-setup.sh  sort_yaml_specs.py  validate-version-bump.sh
src/griddy/: __init__.py  _version.py  settings.py  sort_yaml_specs.py
src/openapi/: _version.py  authentication.py  betting.py  content.py  content_insights.py  defensive_pass_rush_statistics.py  defensive_player_overview.py  defensive_statistics.py  experience.py  fantasy_statistics.py  filmroom.py  football.py  player_passing_statistics.py  player_receiving_statistics.py  player_rushing_statistics.py  player_statistics.py  players.py  plays.py  schedules.py  schedules_extended.py  scores.py  sdk.py  sdkconfiguration.py  (+10 more)
tests/: __init__.py  conftest.py  test_generate_endpoints.py  test_generate_model_inits.py  test_settings.py
(+3137 files in other folders)
