[project]
name = "griddy"
version = "0.7.5"
description = "Python SDK for football data sources."
authors = [
    {name = "John Griebel", email = "john@thistlegrow.com"}
]
readme = "README.md"
requires-python = ">=3.14"
keywords = ["sports", "nfl", "espn", "data", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
    "black>=25.9.0",
    "hatch==1.15.1",
    "twine==6.2.0",
    "playwright==1.55.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "requests-mock>=1.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "types-python-dateutil>=2.8.0",
    "pre-commit==4.3.0",
    "responses==0.25.8",
    "pytest-asyncio==1.2.0",
    "pytest-httpx==0.35.0"
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.18.0",
    "mike>=2.1.3",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-minify-plugin>=0.8.0"


]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[project.urls]
Homepage = "https://github.com/jkgriebel93/griddy-sdk-python"
Documentation = "https://jkgriebel93.github.io/griddy-sdk-python"
Repository = "https://github.com/jkgriebel93/griddy-sdk-python"
Issues = "https://github.com/jkgriebel93/griddy-sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/griddy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-m",
    "not integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: Unit tests for logic that doesn't contact external services",
]
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.txt"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

