[project]
name = "griddy"
version = "0.45.0"
description = "SDK for football data sources."
readme = "README.md"
authors = [
    { name = "John Griebel", email = "john@thistlegrow.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3,<5.0",
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.9.1,<3.0",
    "python-dateutil>=2.9.0.post0,<3.0",
    "pyyaml>=6.0.3,<7.0",
]

[project.optional-dependencies]
browser-auth = [
    "playwright==1.58.0",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "private-registry"
url = "https://thistle-grow-685711685350.d.codeartifact.us-east-1.amazonaws.com/pypi/griddy/simple/"
explicit = true

[dependency-groups]
dev = [
    "ipython>=9.10.0,<10.0",
    "mypy>=1.19.1,<2.0",
    "pre-commit>=4.5.1,<5.0",
    "pytest>=9.0.2,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=7.0.0,<8.0",
    "pytest-httpx>=0.36.0,<1.0",
    "pytest-xdist[psutil]>=3.8.0,<4.0",
    "ruff>=0.11.12,<1.0",
    "types-python-dateutil>=2.9.0.20260124,<3.0",
]

[project.urls]
Homepage = "https://github.com/jkgriebel93/griddy-sdk-python"
Documentation = "https://jkgriebel93.github.io/griddy-sdk-python"
Repository = "https://github.com/jkgriebel93/griddy-sdk-python"
Issues = "https://github.com/jkgriebel93/griddy-sdk-python/issues"

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F401", "I"]
per-file-ignores = { "src/griddy/nfl/_hooks/types.py" = ["F401"], "src/griddy/nfl/types/basemodel.py" = ["F401"], "src/griddy/nfl/httpclient.py" = ["F401"], "src/griddy/pfr/httpclient.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["griddy"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/griddy",
    "--cov-report=term-missing",
    "-m",
    "not integration",
    "--numprocesses=auto"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: Unit tests for logic that doesn't contact external services",
]
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.txt"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # Single-line re-export stubs — tested via their core originals
    "src/griddy/pfr/_constants.py",
    "src/griddy/core/base_utils.py",
    # Event streaming utilities — not used by any current SDK endpoints
    "src/griddy/core/utils/eventstreaming.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    # Defensive re-raise blocks in lazy-loading __getattr__ (corrupt install guard)
    "except ImportError as e:",
    "except AttributeError as e:",
    # Client type assertions (only fire with invalid user-supplied clients)
    "assert issubclass\\(",
]
